# learn-opengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LearnOpenGL  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: context.c.FCCAE2864B410461.idx  egl_context.c.217954673A5783CB.idx  fractional-scale-v1-client-protocol-code.h.38ABC2320236A41E.idx  fractional-scale-v1-client-protocol.h.E46DD0F29D5C80B4.idx  glad.c.A9B839133CF947CF.idx  glad.h.4A1F9999CC83E426.idx  glfw3.h.5505CA3492683834.idx  glfw3native.h.02219358C776735A.idx  glx_context.c.99EEA0D2C65E950C.idx  idle-inhibit-unstable-v1-client-protocol-code.h.0C01737B40885848.idx  idle-inhibit-unstable-v1-client-protocol.h.2739C08DAC4DBAE8.idx  init.c.F0D4347DC75A5589.idx  input.c.0DA7754A2D3DA396.idx  internal.h.F12B874248C97E86.idx  khrplatform.h.02C73C9DADDF6DA8.idx  linux_joystick.c.D9ED546ADB08ECBA.idx  linux_joystick.h.65A18306A2CE1221.idx  main.cpp.42CE1422EF40A757.idx  mappings.h.FD669EA0653ED4A9.idx  monitor.c.9E59987F2A79DCED.idx  null_init.c.73F65B54EC324E99.idx  null_joystick.c.60DB4F66DEABFF55.idx  null_joystick.h.A7439E51831B3B46.idx  null_monitor.c.297250FF9FD122DD.idx  null_platform.h.B9E7593CAEBF26C7.idx  null_window.c.9CE83D2715B2E0B3.idx  osmesa_context.c.CB6C5E7D50352FB9.idx  platform.c.0384AA21DB671108.idx  platform.h.404DC500348C86F1.idx  pointer-constraints-unstable-v1-client-protocol-code.h.23DE0F6CCFA42369.idx  pointer-constraints-unstable-v1-client-protocol.h.DF3A2B878E9478DA.idx  posix_module.c.A5BEB51CFBBB7BD2.idx  (+30 more)
src/: main.cpp
